--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "next": "^13.3.1",
     "next-themes": "^0.2.1",
+    "prop-types": "^15.8.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.43.9",
+    "react-router-dom": "^6.21.2",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
