--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.43.9",
+    "react-router-dom": "^6.21.2",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
