--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.43.9",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.2",
     "styled-components": "^6.1.8"
   },
