--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "axios": "^1.6.5",
     "mongodb": "^6.3.0",
     "next": "^13.3.1",
     "next-themes": "^0.2.1",
@@ -36,6 +37,7 @@
     "react-hook-form": "^7.43.9",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.2",
+    "string-similarity": "^4.0.4",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
