--- a/package.json
+++ b/package.json
@@ -36,7 +36,10 @@
     "react-dom": "^18",
     "react-hook-form": "^7.43.9",
     "react-icons": "^5.0.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.21.2",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "string-similarity": "^4.0.4",
     "styled-components": "^6.1.8"
   },
